# ArcLight

./: .gitignore  CMakeLists.txt  README.md
apps/: al-chat.cpp  al-gen.cpp  al-ppl.cpp
include/: arg.h  context.h  gguf.h  model.h  sampler.h  tokenizer.h
ipython/: bind.py
models/: models.h  qwen3.cpp
nnml/: .gitignore  CMakeLists.txt
nnml/include/: cgraph.h  memory.h  nnml.h  ops.h  scheduler.h  tensor.h  thread.h
nnml/src/: cgraph.cpp  memory.cpp  scheduler.cpp  tensor.cpp  thread.cpp
nnml/src/ops/: binary.cpp  ops.cpp  types.cpp
nnml/src/ops/arm/: arm.cpp  common.cpp  gemm.cpp
nnml/test/: test-cgraph.cpp  test-gemm.cpp
src/: context.cpp  gguf.cpp  model.cpp  sampler.cpp  tokenizer.cpp
